Added base API Spec and database schema
