# internal/types/operations/add_book_rating_parameters.go
@@ -1,0 +1,147 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"io"
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+
+	"test-project/internal/types"
+)
+
+// NewAddBookRatingParams creates a new AddBookRatingParams object
+// no default values defined in spec.
+func NewAddBookRatingParams() AddBookRatingParams {
+
+	return AddBookRatingParams{}
+}
+
+// AddBookRatingParams contains all the bound params for the add book rating operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters addBookRating
+type AddBookRatingParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*Book with rating/notes.
+	  Required: true
+	  In: body
+	*/
+	Body *types.Book
+	/*Id of book to rate.
+	  Required: true
+	  In: path
+	*/
+	BookID strfmt.UUID `param:"book_id"`
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewAddBookRatingParams() beforehand.
+func (o *AddBookRatingParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body types.Book
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			if err == io.EOF {
+				res = append(res, errors.Required("body", "body", ""))
+			} else {
+				res = append(res, errors.NewParseError("body", "body", "", err))
+			}
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Body = &body
+			}
+		}
+	} else {
+		res = append(res, errors.Required("body", "body", ""))
+	}
+	rBookID, rhkBookID, _ := route.Params.GetOK("book_id")
+	if err := o.bindBookID(rBookID, rhkBookID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *AddBookRatingParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// body
+	// Required: true
+
+	// body is validated in endpoint
+	//if err := o.Body.Validate(formats); err != nil {
+	//  res = append(res, err)
+	//}
+
+	// book_id
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	if err := o.validateBookID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindBookID binds and validates parameter BookID from path.
+func (o *AddBookRatingParams) bindBookID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	// Format: uuid
+	value, err := formats.Parse("uuid", raw)
+	if err != nil {
+		return errors.InvalidType("book_id", "path", "strfmt.UUID", raw)
+	}
+	o.BookID = *(value.(*strfmt.UUID))
+
+	if err := o.validateBookID(formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// validateBookID carries on validations for parameter BookID
+func (o *AddBookRatingParams) validateBookID(formats strfmt.Registry) error {
+
+	if err := validate.FormatOf("book_id", "path", "uuid", o.BookID.String(), formats); err != nil {
+		return err
+	}
+	return nil
+}
