# internal/types/operations/change_list_name_parameters.go
@@ -1,0 +1,147 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"io"
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+
+	"test-project/internal/types"
+)
+
+// NewChangeListNameParams creates a new ChangeListNameParams object
+// no default values defined in spec.
+func NewChangeListNameParams() ChangeListNameParams {
+
+	return ChangeListNameParams{}
+}
+
+// ChangeListNameParams contains all the bound params for the change list name operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters changeListName
+type ChangeListNameParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*updated List
+	  Required: true
+	  In: body
+	*/
+	Body *types.List
+	/*ID from list to update
+	  Required: true
+	  In: path
+	*/
+	ListID strfmt.UUID `param:"list_id"`
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewChangeListNameParams() beforehand.
+func (o *ChangeListNameParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body types.List
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			if err == io.EOF {
+				res = append(res, errors.Required("body", "body", ""))
+			} else {
+				res = append(res, errors.NewParseError("body", "body", "", err))
+			}
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Body = &body
+			}
+		}
+	} else {
+		res = append(res, errors.Required("body", "body", ""))
+	}
+	rListID, rhkListID, _ := route.Params.GetOK("list_id")
+	if err := o.bindListID(rListID, rhkListID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *ChangeListNameParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// body
+	// Required: true
+
+	// body is validated in endpoint
+	//if err := o.Body.Validate(formats); err != nil {
+	//  res = append(res, err)
+	//}
+
+	// list_id
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	if err := o.validateListID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindListID binds and validates parameter ListID from path.
+func (o *ChangeListNameParams) bindListID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	// Format: uuid
+	value, err := formats.Parse("uuid", raw)
+	if err != nil {
+		return errors.InvalidType("list_id", "path", "strfmt.UUID", raw)
+	}
+	o.ListID = *(value.(*strfmt.UUID))
+
+	if err := o.validateListID(formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// validateListID carries on validations for parameter ListID
+func (o *ChangeListNameParams) validateListID(formats strfmt.Registry) error {
+
+	if err := validate.FormatOf("list_id", "path", "uuid", o.ListID.String(), formats); err != nil {
+		return err
+	}
+	return nil
+}
