# internal/types/operations/delete_list_parameters.go
@@ -1,0 +1,108 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+)
+
+// NewDeleteListParams creates a new DeleteListParams object
+// no default values defined in spec.
+func NewDeleteListParams() DeleteListParams {
+
+	return DeleteListParams{}
+}
+
+// DeleteListParams contains all the bound params for the delete list operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters deleteList
+type DeleteListParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*List ID from the list to delete.
+	  Required: true
+	  In: path
+	*/
+	ListID strfmt.UUID `param:"list_id"`
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewDeleteListParams() beforehand.
+func (o *DeleteListParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	rListID, rhkListID, _ := route.Params.GetOK("list_id")
+	if err := o.bindListID(rListID, rhkListID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *DeleteListParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// list_id
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	if err := o.validateListID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindListID binds and validates parameter ListID from path.
+func (o *DeleteListParams) bindListID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	// Format: uuid
+	value, err := formats.Parse("uuid", raw)
+	if err != nil {
+		return errors.InvalidType("list_id", "path", "strfmt.UUID", raw)
+	}
+	o.ListID = *(value.(*strfmt.UUID))
+
+	if err := o.validateListID(formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// validateListID carries on validations for parameter ListID
+func (o *DeleteListParams) validateListID(formats strfmt.Registry) error {
+
+	if err := validate.FormatOf("list_id", "path", "uuid", o.ListID.String(), formats); err != nil {
+		return err
+	}
+	return nil
+}
