# internal/types/operations/search_books_parameters.go
@@ -1,0 +1,98 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+)
+
+// NewSearchBooksParams creates a new SearchBooksParams object
+// no default values defined in spec.
+func NewSearchBooksParams() SearchBooksParams {
+
+	return SearchBooksParams{}
+}
+
+// SearchBooksParams contains all the bound params for the search books operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters searchBooks
+type SearchBooksParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*Search term for searching books. (title, author or publisher)
+	  Required: true
+	  In: query
+	*/
+	Query string `query:"query"`
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewSearchBooksParams() beforehand.
+func (o *SearchBooksParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	qs := runtime.Values(r.URL.Query())
+
+	qQuery, qhkQuery, _ := qs.GetOK("query")
+	if err := o.bindQuery(qQuery, qhkQuery, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *SearchBooksParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// query
+	// Required: true
+	// AllowEmptyValue: false
+	if err := validate.Required("query", "query", o.Query); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindQuery binds and validates parameter Query from query.
+func (o *SearchBooksParams) bindQuery(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	if !hasKey {
+		return errors.Required("query", "query", rawData)
+	}
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// AllowEmptyValue: false
+	if err := validate.RequiredString("query", "query", raw); err != nil {
+		return err
+	}
+
+	o.Query = raw
+
+	return nil
+}
